[package]
name = "em-liquid"
version = "0.1.0"
authors = ["Yasushi Sakai <yasushisakai+git@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5.4"
actix-rt = "2.2.0"
actix-web = "3.3.2"
env_logger = "0.8.4"
ndarray = "0.15.3"
serde_json = "1.0.64"
uuid = "0.8.2"
# vote={path="../vote/"}
vote={git="https://github.com/makuhari-city/vote", rev="6a6c12ce81b16317b44f3c16b24fee9b1939701b"}

